--- a/src/app/styles/themes/DarkBlueSky.scss
+++ b/src/app/styles/themes/DarkBlueSky.scss
@@ -18,9 +18,9 @@
 
 
   
-    --border-color1: #000;
+    --border-color1: #03035c;
     --border-color2: #3f18cc;
-    --border-color3: #000;
+    --border-color3: #03035c;
     /* Цвета меню */
     --menu-item-text: #004488; /* Цвет текста элементов меню */
    
