--- a/src/app/styles/themes/GreenBrown.scss
+++ b/src/app/styles/themes/GreenBrown.scss
@@ -17,9 +17,9 @@
   --btn-text-alt: #e4dbdb;
 
   
-    --border-color1: #000;
-    --border-color2: #605000;
-    --border-color3: #000;
+    --border-color1: #d0c000;
+    --border-color2: #d0c000;
+    --border-color3: #d0c000;
     /* Цвета меню */
     --menu-item-text: #302000; /* Цвет текста элементов меню */
    
@@ -27,18 +27,18 @@
     --list-item-text: #000088; /* Цвет текста в списках */
    
     /* Фоны */
-    --background-main: #d0c000; /* Основной фон */
-    --background-alt: #d0c000; /* Альтернативный фон */
-    --panel-bg: #d0c000; /* Фон панели */
-    --panel-item-bg: #ffffff; /* Фон элементов панели */
-    --block-bg: #d0c000; /* Фон блоков */
+    --background-main: #605000; /* Основной фон */
+    --background-alt: #605000; /* Альтернативный фон */
+    --panel-bg: #605000; /* Фон панели */
+    --panel-item-bg: #d0c000; /* Фон элементов панели */
+    --block-bg: #605000; /* Фон блоков */
    
     /* Тени */
     --shadow-color-1: rgba(60, 64, 67, 0);
     --shadow-color-2: rgba(9, 36, 51, 0);
    
     /* Цвета текста */
-    --font-color-light: #000000;
+    --font-color-light: #d0c000;
    
     /* Цвета input */
     --color-form-input: #ffffff;
