--- a/src/shared/ui/block/block.scss
+++ b/src/shared/ui/block/block.scss
@@ -5,4 +5,7 @@
     background: var(--block-bg);
     color: var(--font-color-light);
     width: 100%;
+    img{
+        max-width: 100%;
+    }
 }
