--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -31,7 +31,7 @@
 //  Цвета форм
 --form-text:#6b6b6c; 
   /* Фоны */
-  --background-main: #fae3ea; /* Основной фон */
+  --background-main: #e3eefa; /* Основной фон */
   --background-alt: #f5f5f5; /* Альтернативный фон */
   --panel-bg: #F1F1F1; /* Фон панели */
   --panel-item-bg: #ffffff; /* Фон элементов панели */
