--- a/src/pages/homePage/ui/homePage.scss
+++ b/src/pages/homePage/ui/homePage.scss
@@ -13,6 +13,10 @@ gap: var(--spacing-m);
   flex-direction: column;
  
   gap: var(--spacing-m);
+  img{
+    max-width: 100%;
+    border-radius: var(--radius-lg);
+}
 }
 .table-page{
   display: flex;
