--- a/src/widgets/header/ui/header.scss
+++ b/src/widgets/header/ui/header.scss
@@ -1,24 +1,38 @@
 .Header {
+  background-color: var(--background-main);
   width: 100%;
+  height: var(--header-height);
   grid-area: header;
   top: 0;
   position: sticky;
   z-index: 99;
+
+&__logo{
+  user-select: none;
+  &-wrap{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+  }
+  padding:var(--spacing-m) ;
+
+  span{
+    font-size: 36px;
+    font-weight: bold;
+    color: var(--font-color-light);
+  }
+  .first{
+    color: var(--accent-color);
+  }
+ 
+}
+.content-container{
+  height: 100%;
   display: flex;
   align-items: center;
   
   justify-content: end;
-  gap: var(--spacing-xl);
-  background-color:var(--background-main);
-  @media (min-width: 1200px) {
-  
-    padding: var(--spacing-s) var(--spacing-xl);
-  }
-  @media (min-width: 992px) and (max-width: 1199px) {
-    padding: var(--spacing-s) var(--spacing-m);
-  }
-  @media (max-width: 767px) {
- 
-   padding: var(--spacing-s) var(--spacing-m);
-  }
+  gap: var(--spacing-m);
+}
+
 }
