--- a/src/widgets/navigation/ui/nav.scss
+++ b/src/widgets/navigation/ui/nav.scss
@@ -1,10 +1,10 @@
 .nav {
-  background-color: var(--panel-bg);
+  background-color: var(--background-main);
   grid-area: nav;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - var(--header-height));
   position: sticky;
-  top: 0px;
+  top:  var(--header-height)  ;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -16,7 +16,7 @@
   &__container {
     height: 100%;
     width: 100%;
-    padding: var(--spacing-l) var(--spacing-m);
+    // padding: var(--spacing-l) var(--spacing-m);
   
   }
 
@@ -31,6 +31,7 @@
     transform: translateY(100%); 
     opacity: 0; 
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    padding: var(--spacing-m);
     padding-bottom: 70px;
     &--active {
       transform: translateY(0); 
@@ -45,7 +46,7 @@
     a {
       color: var(--font-color-light);
     }
-    overflow: hidden;
+  
   }
 
   ul,
