--- a/src/widgets/navigation/ui/navMobile.scss
+++ b/src/widgets/navigation/ui/navMobile.scss
@@ -1,7 +1,7 @@
 .NavMobile {
   width: 100vw;
   height: 70px;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   padding: 0 var(--spacing-m);
   z-index: 1200;
