--- a/src/widgets/gosuslugi/ui/gosuslugi.css
+++ b/src/widgets/gosuslugi/ui/gosuslugi.css
@@ -23,10 +23,10 @@
     font-size: 18px;
     line-height: 24px;
     cursor: pointer;
-    background: var(--button-bg);
+    background: var(--accent-color);
     color: #fff;
     border: none;
-    border-radius: var(--radius-xl);
+    /* border-radius: var(--radius-xl); */
     outline: 0
 }
 
@@ -155,20 +155,21 @@
 #js-show-iframe-wrapper .pos-banner-fluid .pos-banner-btn_2 {
     width: 100%;
     min-height: 52px;
-    background: var(--button-bg);
+    background: var(--accent-color);
     color: #fff;
     font-size: 16px;
     font-family: LatoWeb, sans-serif;
     font-weight: 400;
     padding: 0;
     line-height: 1.2;
+    border-radius: var(--radius-md);
     /* border: 2px solid var(--button-bg); */
 }
 
 #js-show-iframe-wrapper .pos-banner-fluid .pos-banner-btn_2:active,
 #js-show-iframe-wrapper .pos-banner-fluid .pos-banner-btn_2:focus,
 #js-show-iframe-wrapper .pos-banner-fluid .pos-banner-btn_2:hover {
-    background: #e4ecfd
+    background: var(--accent-color-hover);
 }
 
 #js-show-iframe-wrapper .bf-17 {
@@ -238,6 +239,6 @@
 .gosuslugi{
     /* padding: var(--spacing-m); */
     overflow: hidden;
-    border-radius: var(--radius-md);
+    border-radius: var(--radius-lg);
     
 }
