--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -159,7 +159,7 @@ a {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  @media screen and (min-width: 1220px) {
+  @media screen and (max-width: 1220px) {
     padding:0 20px  ;
   }
 }
