--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -9,7 +9,7 @@
   --accent-color-hover: #917d0d;/* Фон кнопки при наведении */
 
    // моно цвета
-   --btn-color-alt: #F8F8F8;
+   --btn-color-alt: #ffffff;
    --btn-color-alt-hover: #ffffff;
    --btn-text-alt: #000000;
  
@@ -31,7 +31,7 @@
 //  Цвета форм
 --form-text:#6b6b6c; 
   /* Фоны */
-  --background-main: #e3eefa; /* Основной фон */
+  --background-main: #eee; /* Основной фон */
   --background-alt: #f5f5f5; /* Альтернативный фон */
   --panel-bg: #F1F1F1; /* Фон панели */
   --panel-item-bg: #ffffff; /* Фон элементов панели */
