--- a/src/widgets/navigation/ui/navMobile.scss
+++ b/src/widgets/navigation/ui/navMobile.scss
@@ -3,8 +3,9 @@
   height: 70px;
   position: fixed;
   bottom: 0;
+  left: 0;
   padding: 0 var(--spacing-m);
-  z-index: 1200;
+  z-index: 900;
 
   background-color: var(--block-bg);
  
